--- a/src/styles/ProfilePostsPage.module.css
+++ b/src/styles/ProfilePostsPage.module.css
@@ -57,7 +57,6 @@
   display: none !important;
 }
 .no-posts-container {
-  margin: var(--spacing-8);
   padding: var(--spacing-12) var(--spacing-16);
   border-radius: 8px;
   border: 2px solid #ebedf0;
